filepath slash style arg, translations

--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -2203,6 +2203,7 @@
                                             <Style.Triggers>
                                                 <DataTrigger Binding="{Binding Type}" Value="Seed"><Setter Property="Text" Value="🎲"/></DataTrigger>
                                                 <DataTrigger Binding="{Binding Type}" Value="WildcardSupportPrompt"><Setter Property="Text" Value="💡"/></DataTrigger>
+                                                <DataTrigger Binding="{Binding Type}" Value="FilePath"><Setter Property="Text" Value="📜"/></DataTrigger>
                                             </Style.Triggers>
                                         </Style>
                                     </TextBlock.Style>
