delete tabs & groups confirmation settings

--- a/Comfizen/Views/SettingsWindow.xaml
+++ b/Comfizen/Views/SettingsWindow.xaml
@@ -251,6 +251,12 @@
                                 <CheckBox Content="{local:Translate Settings_ConfirmPresetDelete}"
                                           IsChecked="{Binding ShowPresetDeleteConfirmation}" 
                                           Margin="0,5,0,0"/>
+                                <CheckBox Content="{local:Translate Settings_ConfirmGroupDelete}"
+                                          IsChecked="{Binding ShowGroupDeleteConfirmation}" 
+                                          Margin="0,5,0,0"/>
+                                <CheckBox Content="{local:Translate Settings_ConfirmTabDelete}"
+                                          IsChecked="{Binding ShowTabDeleteConfirmation}" 
+                                          Margin="0,5,0,0"/>
                                 <CheckBox Content="{local:Translate Settings_ShowUndoRedoButtons}"
                                           IsChecked="{Binding ShowUndoRedoButtons}" 
                                           Margin="0,5,0,0"/>
